--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_staggered_grid_view: ^0.7.0
   cached_network_image: ^3.4.1
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
