--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   cached_network_image: ^3.4.1
   dio: ^5.7.0
+  infinite_scroll_pagination: ^4.1.0
+  permission_handler: ^11.3.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
