--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   permission_handler: ^11.3.1
   path_provider: ^2.1.5
   google_mobile_ads: ^5.2.0
+  camera: ^0.11.0+2
+  flutter_downloader: ^1.11.8
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,7 @@ flutter:
   # the material Icons class.
   assets:
     - shorebird.yaml
+    - assets/images/
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
