Change package name to com.snapwalls.app and modify app name

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:name="${applicationName}"
         android:enableOnBackInvokedCallback="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="snap_walls">
+        android:label="SnapWalls">
 
         <service
             android:name="DownloadService"
