--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   camera: ^0.11.0+2
   flutter_downloader: ^1.11.8
   flutter_dotenv: ^5.2.1
+  in_app_review: ^2.0.10
 
 dev_dependencies:
   flutter_test:
