--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_downloader: ^1.11.8
   flutter_dotenv: ^5.2.1
   in_app_review: ^2.0.10
+  share_plus: ^10.1.3
 
 dev_dependencies:
   flutter_test:
