--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_dotenv: ^5.2.1
   in_app_review: ^2.0.10
   share_plus: ^10.1.3
+  rive: ^0.13.20
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +73,7 @@ flutter:
   assets:
     - shorebird.yaml
     - assets/images/
+    - assets/raw/
     - .env
   uses-material-design: true
 
