--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   share_plus: ^10.1.3
   rive: ^0.13.20
   get: ^4.6.6
+  shared_preferences: ^2.3.5
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
