--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   get: ^4.6.6
   shared_preferences: ^2.3.5
   flutter_riverpod: ^2.6.1
+  cloud_firestore: ^5.6.12
+  firebase_core: ^3.15.2
+  firebase_crashlytics: ^4.3.10
 
 dev_dependencies:
   flutter_test:
